--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,23 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
-	</dependencies>
+	    <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+    	    <artifactId>webdrivermanager</artifactId>
+            <version>3.3.0</version>
+            <scope>test</scope>
+		</dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+            <version>3.141.59</version>
+			<scope>test</scope>
+        </dependency>
+          <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>22.0</version>
+    </dependency>
+    </dependencies>
 
 </project>
